--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 
-    <h2>Extended Canvas2D text metrics</h2>
+    <h2>Extended Canvas2D text metrics (<a href="https://github.com/Pomax/fontmetrics.js">github repo</a>)</h2>
 
     <p>This page demonstrates the <a href="fontmetrics.js">fontmetrics.js</a> library,
     which updates the canvas2d ctx.measureText(string) function so that it returns not just
